# edurisk-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  api.py  main.py
app/ui/: __init__.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  assets.md  final-review.md  image-prompts.md  interview-prep.md  linkedin.md  methodology.md  portfolio.md  results.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AdviceCards.tsx  FactorCards.tsx  PredictionForm.tsx  ProbabilityBars.tsx  RiskGauge.tsx  ShapWaterfall.tsx
frontend/src/lib/: api.ts  types.ts
models/: README.md
scripts/: generate_all_figures.py  generate_real_charts.py
src/: __init__.py  config.py
src/data/: __init__.py  dataset.py
src/evaluation/: __init__.py  error_analysis.py  metrics.py  plots.py  reporter.py
src/explainability/: __init__.py  shap_utils.py
src/features/: __init__.py  engineering.py
src/inference/: __init__.py  logger.py  predictor.py
src/preprocessing/: __init__.py  pipeline.py
src/training/: __init__.py  models.py  trainer.py  tuner.py
src/utils/: __init__.py  logging.py  validators.py
tests/: conftest.py  test_api.py  test_inference.py  test_preprocessing.py  test_training.py
